# KeyAdjuster

./: .gitignore  README.md  key_adjuster_gui.py  key_check.py  listen_and_play.py  loopback_record.py  make_wav.py  pyaudio_init.py  pyproject.toml  record.py  test.py  wav_play.py
app/: .env  KeyAdjuster.spec  audio.py  deviceConfig.py  device_config.py  globalVariables.py  global_variables.py  keySlider.py  key_adjuster_gui.py  key_slider.py  main.py  pyproject.toml  sample.py  slider.py  start.py  start_button.py  thread_pyaudio.py  tip.py  wakeup.py
app/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
ibuki-app/: key_adjuster_gui.py  thread_pyaudio.py
ibuki_app/: key_adjuster_gui.py  thread_pyaudio.py
sample/: realtime.py  realtime_nonblocking.py  test-pyaudio.py  wavfile_keyadjuster.py
sample/pyaudio/: realtime_nonblocking.py
sample/pyqt5/: app.py  realtime_nonblocking.py
sample/threading/: thread_parallel.py  thread_pyaudio.py
sample_pyaudio/: wavfile_pitch_shift.py
sample_pyqt5/: app.py  realtime_nonblocking.py  widgets_example_copy.py
