[tool.poetry]
name = "keyadjuster"
version = "0.1.0"
description = ""
authors = ["Ibuki-Narukawa <ibuki0212job@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyAudio = "^0.2.12"
librosa = "^0.9.2"
pyrubberband = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
